# BasairApp

./: README.md
sdp-g10-main/basair_app/lib/: main.dart
sdp-g10-main/basair_real_app/: README.md  pubspec.yaml
sdp-g10-main/basair_real_app/android/app/: build.gradle.kts
sdp-g10-main/basair_real_app/ios/Runner/: Info.plist
sdp-g10-main/basair_real_app/ios/Runner.xcodeproj/: project.pbxproj
sdp-g10-main/basair_real_app/lib/: main.dart
sdp-g10-main/basair_real_app/lib/features/: ai_generate_tafsir - Shortcut.lnk
sdp-g10-main/basair_real_app/linux/: CMakeLists.txt
sdp-g10-main/basair_real_app/linux/runner/: my_application.cc
sdp-g10-main/basair_real_app/macos/Runner.xcodeproj/: project.pbxproj
sdp-g10-main/basair_real_app/test/: widget_test.dart
sdp-g10-main/basair_real_app/web/: index.html  manifest.json
sdp-g10-main/basair_real_app/windows/: CMakeLists.txt
sdp-g10-main/data_extraction/: Schema  extract_surah_pdf_to_json.py  mahawer04.JSON  readme.md
sdp-g10-main/sdp_quran_navigator/: README.md  pubspec.yaml
sdp-g10-main/sdp_quran_navigator/.run/: basair_app.run.xml
sdp-g10-main/sdp_quran_navigator/lib/: main.dart
sdp-g10-main/sdp_quran_navigator/linux/: CMakeLists.txt
sdp-g10-main/sdp_quran_navigator/linux/runner/: my_application.cc
sdp-g10-main/sdp_quran_navigator/test/: widget_test.dart
sdp-g10-main/sdp_quran_navigator/web/: index.html  manifest.json
sdp-g10-main/sdp_quran_navigator/windows/: CMakeLists.txt  main.cpp  pubspec.yaml
sdp-g10-main/sdp_test/: README.md  pubspec.yaml
sdp-g10-main/sdp_test/ios/Runner/: Info.plist
sdp-g10-main/sdp_test/lib/: main.dart
sdp-g10-main/sdp_test/linux/: CMakeLists.txt
sdp-g10-main/sdp_test/test/: widget_test.dart
sdp-g10-main/sdp_test/web/: index.html  manifest.json
sdp-g10-main/sdp_test/windows/: CMakeLists.txt
sdp-g10-main/topics_map/: README.md  pubspec.yaml
sdp-g10-main/topics_map/lib/: main.dart
sdp-g10-main/topics_map/linux/: CMakeLists.txt
sdp-g10-main/topics_map/test/: widget_test.dart
sdp-g10-main/topics_map/web/: index.html  manifest.json
sdp-g10-main/topics_map/windows/: CMakeLists.txt
(+220 files in other folders)
